# fox

./: .gitignore  Cargo.toml  README.md
scripts/: dummy_signature.py  reverse_engineer_generate_k.py
src/: main.rs
src/analysis/: gradient_descent.rs  interpolation.rs  mod.rs  partitions.rs  rings.rs
src/dydx/: account.rs  constants.rs  crypto.rs  ec_math.rs  market_helpers.rs  mod.rs
src/strategy/: market_exposure.rs  market_make.rs  mod.rs  reverse_retail.rs  second_derivative_trading.rs  structured_entropy.rs
