[package]
name = "fox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0.6" }
dotenv = { version = "0.15" }

reqwest = { version = "0.11.14", features = ["json"] }
base64 = { version = "0.21" }
sha2 = { version = "0.10.6" }
hmac = { version = "0.12.1" }
primitive-types = { version = "0.12.1" }
lazy_static = { version = "1.4" }

rand = { version = "0.8.5" }
url = { version = "2.3.1" }
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
futures-util = { version = "0.3.26" }
serde_json = { version = "1.0.9" }
chrono = { version = "0.4.23" }
colored = { version = "2" }

crossbeam = { version = "0.8.2" }
rayon = { version = "1.7" }
